# ProtocolCodecEngine

./: CMakeLists.txt  build.gradle.kts  readme.md  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
include/: protocolcodecengine.h  protocolcodecinterface.h  protocolflags.h  protocoltypecodec.h
include/decoder/: protocoldecoder.h
include/encoder/: protocolencoder.h
include/flagdata/: datacontent.h  dataend.h  dataheader.h  datasize.h  dataverify.h
include/utils/: protocolflagdata.h  protocoltemplatedecoder.h
src/: CMakeLists.txt  ProtocolCodecEngineConfig.cmake.in  global.h  protocolcodecengine.cpp  protocolcodecengine.h  protocolcodecinterface.cpp  protocolcodecinterface.h  protocolexception.h  protocolflags.h  protocolmetadata.h  protocoltypecodec.h
src/decoder/: protocoldecoder.cpp  protocoldecoder.h
src/encoder/: protocolencoder.cpp  protocolencoder.h
src/flagdata/: dataaddress.h  datacontent.cpp  datacontent.h  dataend.cpp  dataend.h  dataheader.cpp  dataheader.h  datasize.cpp  datasize.h  datatype.cpp  datatype.h  dataverify.cpp  dataverify.h
src/main/kotlin/: Main.kt  ProtocolCodecEngine.kt  ProtocolException.kt  ProtocolFlag.kt  ProtocolTypeCodec.kt
src/main/kotlin/annotations/: Subscribe.kt  Type.kt
src/main/kotlin/codec/: ProtocolCodec.kt  ProtocolDecoder.kt  ProtocolEncoder.kt
src/main/kotlin/flagdata/: ProtocolFlagDataContent.kt  ProtocolFlagDataEnd.kt  ProtocolFlagDataHeader.kt  ProtocolFlagDataSize.kt  ProtocolFlagDataVerify.kt
src/main/kotlin/utils/: ProtocolFlagData.kt  ProtocolTemplateDecoder.kt  Segment.kt
src/protocolcodec/: CMakeLists.txt  global.h  protocolcodecengine.cpp  protocolcodecengine.h  protocolcodecinterface.cpp  protocolcodecinterface.h  protocolmetadata.h  protocoltypecodec.h
src/protocolcodec/decoder/: protocoldecoder.cpp  protocoldecoder.h
src/protocolcodec/encoder/: protocolencoder.cpp  protocolencoder.h
src/protocolcodec/flagdata/: dataaddress.cpp  dataaddress.h  datacontent.cpp  datacontent.h  dataend.cpp  dataend.h  dataheader.cpp  dataheader.h  datasize.cpp  datasize.h  datatype.h  dataverify.cpp  dataverify.h
src/protocolcodec/utils/: byteutils.h  protocolflagdata.h  protocoltemplatedecoder.cpp  protocoltemplatedecoder.h
src/protocolcodec/verifier/: crccheckverify.cpp  crccheckverify.h  noneverify.cpp  noneverify.h  protocolverify.h  sumcheckverify.cpp  sumcheckverify.h
src/utils/: byteutils.h  protocolflagdata.cpp  protocolflagdata.h  protocoltemplatedecoder.cpp  protocoltemplatedecoder.h
test/: CMakeLists.txt  byteutils.h  main.cpp  multitestrunner.h  testutils.cpp
test/case/: codectest.cpp  codectest.h  filetest.cpp  filetest.h  flagtest.cpp  flagtest.h  functionaltest.cpp  functionaltest.h
